[package]
name = "wgpu-learning"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
wgpu = "0.10.1"
image = "0.23"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
bytemuck = { version = "1.7.2", features = ["derive"] }